feat: add ERP procurement supply facade
Closes #192
